--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       </div>
       <nav>
         <ul>
-          <li><a href="index.html" title="Home Page">Home</a></li>
+          <li><a href="index.html" title="Home Page">⇒ Home ⇐</a></li>
           <li>
-            <a href="articoli.html" title="Elenco degli articoli tecnici pubblicati">Articoli</a>
+            <a href="articoli.html" title="Elenco degli articoli tecnici pubblicati">⇒ Articoli ⇐</a>
           </li>
           <li>
-            <a href="contatti.html" title="Candidati inviando un tuo cv">Lavora con noi</a>
+            <a href="contatti.html" title="Candidati inviando un tuo cv">⇒ Lavora con noi ⇐</a>
           </li>
         </ul>
       </nav>
@@ -50,9 +50,9 @@
         <h1>Come creare un template per i post</h1>
         <p>
           <!-- icona matita -->
-          <i class="fas fa-pen-square"></i>di Mario Rossi -
+          <i class="fas fa-pen-square"></i> di Mario Rossi -
           <!-- icona orologio -->
-          <span><i class="fas fa-clock"></i>pubblicato il 25-10-2020</span>
+          <span><i class="fas fa-clock"></i> pubblicato il 25-10-2020</span>
         </p>
 
         <p>
@@ -193,7 +193,6 @@
     </aside>
   </main>
 
-  
     <hr />
 
     <footer>
